调整构建依赖

--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>=9),
                pkg-config,
                qtbase5-dev (>= 5.1),
                qt5-qmake,
-               qt5-default,
+               qt5-default | qtchooser,
                qtscript5-dev,
                qttools5-dev-tools,
                qtbase5-dev-tools,
