--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Standards-Version: 3.9.8
 Homepage: https://www.kylinos.cn
 
 Package: kmre-apk-installer
-Architecture: arm64 amd64
+Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          aapt,
