--- a/debian/control
+++ b/debian/control
@@ -20,7 +20,7 @@ Standards-Version: 3.9.8
 Homepage: https://www.kylinos.cn
 
 Package: kmre-apk-installer
-Architecture: any
+Architecture: amd64 arm64 loong64
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          aapt,
